--- a/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
+++ b/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
@@ -3,43 +3,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
+    <title>
+        <asp:ContentPlaceHolder ID="TitleContent" runat="server" />
+    </title>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+        #main
+        {
+            width: 707px;
+            height: 440px;
+        }
+        #leftrail
+        {
+            height: 440px;
+            width: 135px;
+            float: left;
+            margin: 0 15px 0 20px;
+        }
+        #content
+        {
+            height: 414px;
+            width: 498px;
+            float: left;
+            margin: 0px 20px 0px 0px;
+        }
+    </style>
 </head>
-
 <body>
     <div class="page">
-
         <div id="header">
             <div id="title">
-                <h1>HR Hiring Tool</h1>
+                <h1>
+                    HR Hiring Tool</h1>
             </div>
-              
             <div id="logindisplay">
                 <% Html.RenderPartial("LogOnUserControl"); %>
-            </div> 
-            
+            </div>
             <div id="menucontainer">
-            
-                <ul id="menu">              
-                    <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
-                    <li><%= Html.ActionLink("About", "About", "Home")%></li>
+                <ul id="menu">
+                    <li>
+                        <%= Html.ActionLink("Home", "Index", "Home")%></li>
+                    <li>
+                        <%= Html.ActionLink("About", "About", "Home")%></li>
                 </ul>
-            
             </div>
         </div>
-
         <div id="main">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server" >
-                <div id="leftrail">
-                LEFT RAIL
-                </div>
-                <div id="content">
-                MAIN CONTENT
-                </div>
-            </asp:ContentPlaceHolder>
-
-            <div id="footer">
+            <div id="leftrail">
+                <asp:ContentPlaceHolder ID="LeftRail" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
+            <div id="content">
+                <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
+            <div id="footer" style="float: left;">
             </div>
         </div>
     </div>
