--- a/trunk/Source/HRHiringTool/HRHiringTool/Content/Site.css
+++ b/trunk/Source/HRHiringTool/HRHiringTool/Content/Site.css
@@ -84,7 +84,7 @@ first child of the left and right table columns */
 page width. Or, you can specify an exact pixel width. */
 .page
 {
-    width: 90%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -95,6 +95,9 @@ page width. Or, you can specify an exact pixel width. */
     margin-bottom: 0px;
     color: #000;
     padding: 0;
+    top: 0px;
+    left: 0px;
+    width: 718px;
 }
 
 #header h1
