--- a/trunk/Source/HRHiringTool/HRHiringTool/Content/Site.css
+++ b/trunk/Source/HRHiringTool/HRHiringTool/Content/Site.css
@@ -84,9 +84,10 @@ first child of the left and right table columns */
 page width. Or, you can specify an exact pixel width. */
 .page
 {
-    width: 70%;
+    width: 66%;
     margin-left: auto;
     margin-right: auto;
+    height: 572px;
 }
 
 #header
@@ -97,7 +98,7 @@ page width. Or, you can specify an exact pixel width. */
     padding: 0;
     top: 0px;
     left: 0px;
-    width: 718px;
+    width: 710px;
 }
 
 #header h1
