--- a/Source/HRHiringTool/HRHiringTool/Content/Site.css
+++ b/Source/HRHiringTool/HRHiringTool/Content/Site.css
@@ -34,8 +34,10 @@ a:active
 
 p, ul
 {
-    margin-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 10px;
     line-height: 1.6em;
+    padding-left: 2em;
 }
 
 /* HEADINGS   
@@ -55,7 +57,9 @@ h1
 }
 h2
 {
-    padding: 0 0 10px 0;
+    margin-top : 0;
+    margin-bottom: 20px;
+    padding: 0 10px;
 }
 h3
 {
@@ -84,7 +88,7 @@ first child of the left and right table columns */
 page width. Or, you can specify an exact pixel width. */
 .page
 {
-    width: 66%;
+    width: 73%;
     margin-left: auto;
     margin-right: auto;
     height: 572px;
@@ -98,7 +102,7 @@ page width. Or, you can specify an exact pixel width. */
     padding: 0;
     top: 0px;
     left: 0px;
-    width: 729px;
+    width: 780px;
 }
 
 #header h1
@@ -256,7 +260,7 @@ table th
 
 #menucontainer
 {
-    margin-top:40px;
+    margin-top:20px;
 }
 
 div#title
