--- a/trunk/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
+++ b/trunk/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
@@ -6,6 +6,7 @@
     <title>
         <asp:ContentPlaceHolder ID="TitleContent" runat="server" />
     </title>
+    <script src="<%= Url.Content ("~/Scripts/jquery-1.4.1.min.js") %>" type="text/javascript"></script>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
         #main
@@ -13,7 +14,7 @@
             width: 720px;
             height: 440px;
         }
-        #leftrail
+        #left-rail
         {
             height: 440px;
             width: 130px;
@@ -28,7 +29,7 @@
             padding-left: 30px;
             border: 1px solid #696969;
         }
-        #leftrail span, #leftrail a, #active-openings span, #active-openings a
+        #left-rail span, #left-rail a, #active-openings span, #active-openings a
         {
             width: 120px;
             display: block;
@@ -56,7 +57,7 @@
             </div>
         </div>
         <div id="main">
-            <div id="leftrail">
+            <div id="left-rail">
                 <asp:ContentPlaceHolder ID="LeftRail" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
