--- a/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
+++ b/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
@@ -12,7 +12,7 @@
         #main
         {
             width: 835px;
-            height: 100%;
+            /*height: 100%;*/
         }
         #left-rail
         {
@@ -38,37 +38,37 @@
 </head>
 <body>
     <form runat="server">
-    <div class="page" >
-        <div id="header">
-            <div id="title">
-                <h1>
-                    HR Hiring Tool</h1>
+        <div class="page" >
+            <div id="header">
+                <div id="title">
+                    <h1>
+                        HR Hiring Tool</h1>
+                </div>
+                <div id="logindisplay">
+                    <% Html.RenderPartial("LogOnUserControl"); %>
+                </div>
+                <div id="menucontainer">
+                    <ul id="menu">
+                        <li>
+                            <%= Html.ActionLink("Home", "Index", "Home")%></li>
+                        <li>
+                            <%= Html.ActionLink("About", "About", "Home")%></li>
+                    </ul>
+                </div>
             </div>
-            <div id="logindisplay">
-                <% Html.RenderPartial("LogOnUserControl"); %>
-            </div>
-            <div id="menucontainer">
-                <ul id="menu">
-                    <li>
-                        <%= Html.ActionLink("Home", "Index", "Home")%></li>
-                    <li>
-                        <%= Html.ActionLink("About", "About", "Home")%></li>
-                </ul>
+            <div id="main">
+                <div id="left-rail">
+                    <asp:ContentPlaceHolder ID="LeftRail" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
+                <div id="content">
+                    <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
+                <div id="footer" style="float: left">
+                </div>
             </div>
         </div>
-        <div id="main">
-            <div id="left-rail">
-                <asp:ContentPlaceHolder ID="LeftRail" runat="server">
-                </asp:ContentPlaceHolder>
-            </div>
-            <div id="content">
-                <asp:ContentPlaceHolder ID="MainContent" runat="server">
-                </asp:ContentPlaceHolder>
-            </div>
-            <div id="footer" style="float: left">
-            </div>
-        </div>
-    </div>
     </form>
 </body>
 </html>
