--- a/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
+++ b/Source/HRHiringTool/HRHiringTool/Views/Shared/Site.Master
@@ -34,6 +34,10 @@
             width: 120px;
             display: block;
         }
+        #left-rail img
+        {
+            border: 0;
+        }
     </style>
 </head>
 <body>
