Opening Candidates chat

--- a/Source/HRHiringTool/HRHiringTool/Content/Site.css
+++ b/Source/HRHiringTool/HRHiringTool/Content/Site.css
@@ -121,6 +121,7 @@ page width. Or, you can specify an exact pixel width. */
     background-color: #fff;
     margin-bottom: 30px;
     height:650px;
+    float:left;
 }
 
 #footer
